# dgrisham.github.io

./: README.md  schedule.md  syllabus.md
assignments/: meetup.md
assignments/haskell/: install-stack.sh  monadic_parsec.md
assignments/haskell/1-types_functions/: assignment.md
assignments/haskell/2/: assignment.md
assignments/haskell/3-higher_order_functions/: Assignment3.hs  assignment.md
assignments/haskell/4-tr/: README.md
assignments/haskell/5-calculator/: README.md
assignments/haskell/6-calculator_2/: README.md  Spec.hs  calculator.cabal  test.sh
assignments/ruby/0-style/: description.md
assignments/ruby/1-basics/: description.md
assignments/ruby/2-hangman/: description.md  index.md  testWords.txt
assignments/ruby/3-scramble/: index.md
assignments/ruby/4-regexp_basics/: index.md
assignments/ruby/5-regexp_applied/: index.md
assignments/ruby/6-nim/: index.md
assignments/ruby/7-dsl/: index.md
class_exercises/ruby/: 0-intro.md  1-basics.md  2-classes.md
class_exercises/ruby/2-classes/: InClass_Ruby_Classes.md  index.md
class_exercises/ruby/3-exceptions/: index.md
class_exercises/ruby/demo_files/: questions.qm  questions.rb  questions_test.rb  questionsv1.rb  quiz.rb  quiz_runner.rb  regex_in_class.rb  ruby_basics.rb  ruby_classes-1.rb  ruby_classes-2.rb  ruby_classes-3.rb  ruby_classes-4.rb  ruby_classes-5.rb  ruby_classes-6.rb  ruby_classes-7.rb  ruby_classes-8.rb  ruby_closures-1.rb  ruby_closures-2.rb  ruby_control_flow.rb  ruby_data_types.rb  ruby_exceptions-2.rb  ruby_exceptions.rb  ruby_expressions.rb  ruby_inheritance-1.rb  ruby_lsp.rb  (+26 more)
exams/: practice_exam.md  review-ruby.md
slides/: build.sh
slides/course_overview/: header.tex  slides.md
(+76 files in other folders)
