name:                calculator
version:             0.1.0.0
synopsis:            Simple calculator.
description:         Assignment for CSCI 400 at Colorado School of Mines.
homepage:            https://dgrisham.github.io
license:             BSD3
license-file:        LICENSE
author:              David Grisham
maintainer:          dgrisham@mines.edu
copyright:           2017 David Grisham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
  other-modules:       Common
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5.3 && < 6
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , calculator
                     , unordered-containers
  default-language:    Haskell2010

test-suite calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , calculator
                     , hspec
                     , QuickCheck
                     , unordered-containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
